# VLinder-AI

./: LICENSE  README.md  app.py  inference.py
intel/: intel_sdp_products.db  openvino
intel/.scripts/: POSTIN.intel-openvino-base-2019.3.376-2019.3-376.noarch.rpm  POSTIN.intel-openvino-base-pset-2019.3.376-2019.3-376.noarch.rpm  POSTIN.intel-openvino-setupvars-2019.3.376-2019.3-376.noarch.rpm  POSTUN.intel-openvino-base-2019.3.376-2019.3-376.noarch.rpm  POSTUN.intel-openvino-base-pset-2019.3.376-2019.3-376.noarch.rpm  POSTUN.intel-openvino-setupvars-2019.3.376-2019.3-376.noarch.rpm  SUMMARY.intel-openvino-dl-workbench-2019.3.376-2019.3-376.x86_64.rpm  SUMMARY.intel-openvino-dldt-base-2019.3.376-2019.3-376.noarch.rpm  SUMMARY.intel-openvino-docs-2019.3.376-2019.3-376.noarch.rpm  SUMMARY.intel-openvino-eula-2019.3.376-2019.3-376.noarch.rpm  SUMMARY.intel-openvino-gfx-driver-ubuntu-xenial-2019.3.376-2019.3-376.x86_64.rpm  SUMMARY.intel-openvino-ie-rt-2019.3.376-2019.3-376.x86_64.rpm  SUMMARY.intel-openvino-ie-rt-cpu-ubuntu-xenial-2019.3.376-2019.3-376.x86_64.rpm  SUMMARY.intel-openvino-ie-rt-gna-ubuntu-xenial-2019.3.376-2019.3-376.x86_64.rpm  SUMMARY.intel-openvino-ie-rt-gpu-ubuntu-xenial-2019.3.376-2019.3-376.x86_64.rpm  SUMMARY.intel-openvino-ie-rt-hddl-ubuntu-xenial-2019.3.376-2019.3-376.x86_64.rpm  (+9 more)
intel/mediasdk/: LICENSE  install_media.sh  (+1 more)
intel/openvino_2019.3.376/openvx/samples/samples/: CMakeLists.txt  cv_samples.config
intel/openvino_2019.3.376/openvx/samples/samples/auto_contrast/: CMakeLists.txt  README  auto_contrast.cpp
intel/openvino_2019.3.376/openvx/samples/samples/camera_tampering/: CMakeLists.txt  README  camera_tampering.cpp  camera_tampering_common.cpp  camera_tampering_common.h  camera_tampering_core.cpp  camera_tampering_core.h  camera_tampering_user_nodes_lib.cpp  camera_tampering_user_nodes_lib.h  camera_tampering_user_nodes_module.cpp  cmdoptions.cpp  cmdoptions.hpp  hetero.config.default.txt  hetero.config.gpu-offload.txt  libwl_ctd.cpp  libwl_ctd.h
intel/openvino_2019.3.376/openvx/samples/samples/census_transform/: CMakeLists.txt  README  main.cpp  vx_censustransform_impl.c  vx_censustransform_lib.c  vx_censustransform_module.c  vx_censustransform_opencl_impl.cl  vx_censustransform_opencl_lib.cpp  vx_censustransform_opencl_module.cpp  vx_censustransformtiled_lib.c  vx_censustransformtiled_module.c  vx_user_census_nodes.h
intel/openvino_2019.3.376/openvx/samples/samples/color_copy_pipeline/: CMakeLists.txt  README  cmykhalftone.h  lab2cmykparams_17x17x17.h  lab2cmykparams_33x33x33.h  lightnessdarknesscontrast_params.h  main.cpp  pipelinecontrol.cpp  pipelinecontrol.h  rgb2labparams_17x17x17.h  vx_user_pipeline_nodes.h  vxbackgroundsuppress.cpp  vxbackgroundsuppress_lib.cpp  vxgainoffset10.cpp  vxgainoffset10_lib.cpp  vxgainoffset12.cpp  vxgainoffset12_lib.cpp  vxgenedgek.cpp  vxgenedgek_lib.cpp  vxgenedgemask.cpp  vxgenedgemask_lib.cpp  vxipahalftone.cpp  vxipahalftone_lib.cpp  vxneutralpixeldetection.cpp  vxneutralpixeldetection_lib.cpp  vxpublishkernels.cpp  vxremovefringe.cpp  vxremovefringe_lib.cpp  vxremovefringe_opencl_impl.cl  vxremovefringe_opencl_lib.cpp  vxremovefringe_opencl_module.cpp  vxsymm7x7_opencl_impl.cl  vxsymm7x7_opencl_lib.cpp  vxsymm7x7_opencl_module.cpp
intel/openvino_2019.3.376/openvx/samples/samples/color_copy_pipeline/ipa/: double_c.h  double_sse.h  doubler.c  gradient.c  gradient_c.h  gradient_sse.h  halftone.c  halftone_c.h  halftone_sse.h  ipa-impl.h  ipa.c  ipa.h  rescale.c  rescale_c.h  rescale_sse.h  rotate.c  rotate_c.h  rotate_sse.h  transparency.c  transparency_c.h  transparency_sse.h
intel/openvino_2019.3.376/openvx/samples/samples/common/: CMakeLists.txt
intel/openvino_2019.3.376/openvx/samples/samples/common/include/intel/vx_samples/: cmdparsercfgfile.hpp  cnn_helper.hpp  helper.hpp  hetero.hpp  perfprof.hpp
intel/openvino_2019.3.376/openvx/samples/samples/common/src/: cmdparsercfgfile.cpp  cnn_helper.cpp  helper.cpp  hetero.cpp  perfprof.cpp
intel/openvino_2019.3.376/openvx/samples/samples/hetero_basic/: CMakeLists.txt  README  hetero_basic.cpp
intel/openvino_2019.3.376/openvx/samples/samples/kernel_enumerator/: CMakeLists.txt  README  kernel_enumerator.cpp
intel/openvino_2019.3.376/openvx/samples/samples/lane_detection/: CMakeLists.txt  README  collect_lane_marks.cpp  collect_lane_marks.hpp  lane_detection.cpp  lane_detection.graphml  lane_detection_nodes.map  lane_detection_user_nodes_module.cpp
intel/openvino_2019.3.376/openvx/samples/samples/motion_detection/: CMakeLists.txt  README  cmdoptions.cpp  cmdoptions.hpp  cvsdkworkload.h  hetero.config.cpu-all.txt  hetero.config.default.txt  libwl_md.cpp  libwl_md.h  motion_detection.cpp  motion_detection_common.cpp  motion_detection_common.h  motion_detection_core.cpp  motion_detection_core.h  motion_detection_user_nodes_lib.cpp  motion_detection_user_nodes_lib.h  motion_detection_user_nodes_module.cpp
intel/openvino_2019.3.376/openvx/samples/samples/ocl_custom_kernel/: CMakeLists.txt  README  ocl_custom_kernel.cpp  source.cl
intel/openvino_2019.3.376/openvx/samples/samples/video_stabilization/: CMakeLists.txt  README  cmdoptions.cpp  cmdoptions.hpp  debug_visualization_lib.cpp  debug_visualization_lib.hpp  hetero.config.cpu-all.txt  hetero.config.cpu-convert-extract.txt  hetero.config.cpu-harris-pyramid.txt  hetero.config.cpu-harris.txt  hetero.config.cpu-optical-flow.txt  hetero.config.cpu-pyramid.txt  hetero.config.gpu-all.txt  hetero.config.gpu-first-part.txt  hetero.config.gpu-harris-2-warps.txt  hetero.config.gpu-harris-3-warps.txt  hetero.config.gpu-harris-gaussian-optical.txt  hetero.config.gpu-harris-warp.txt  hetero.config.gpu-last-part.txt  video_stabilization.cpp  video_stabilization.hpp  video_stabilization_core.cpp  video_stabilization_core.h  video_stabilization_opencv.cpp  video_stabilization_openvx.cpp  video_stabilization_user_nodes_lib.cpp  video_stabilization_user_nodes_lib.h  video_stabilization_user_nodes_module.cpp
models/: pretrained_graph.pb  pretrained_labels.txt
requirements/: cpu.txt  packagesPY.txt  ram.txt
(+1147 files in other folders)
